--- a/css/datepickerstyle.scss
+++ b/css/datepickerstyle.scss
@@ -9,6 +9,8 @@ $shadow: 0 2px 4px rgba(0,0,0,0.3);
     position: relative;
     box-sizing: border-box;
     user-select: none;
+
+    font-size: 16px
 }
 
 .datepicker-wrapper{
@@ -36,7 +38,7 @@ $shadow: 0 2px 4px rgba(0,0,0,0.3);
     padding: 16px 16px 12px 16px;
     border-radius: 8px;
 
-    &>.close-datepicker{
+    &>.btn--close-datepicker{
         @extend %GlobalSetting;
         
         position: absolute;
@@ -54,7 +56,7 @@ $shadow: 0 2px 4px rgba(0,0,0,0.3);
             background-color: $gray;
         }
     }
-    &>.header{
+    &>.datepicker__top{
         @extend %GlobalSetting;
 
         height: 32px;
@@ -63,14 +65,14 @@ $shadow: 0 2px 4px rgba(0,0,0,0.3);
         align-items: center;
         margin-bottom: 8px;
         padding: 0 16px;
-        &>.title{
+        &>.datepicker__show-date{
             @extend %GlobalSetting;
 
             font-size: 20px;
             font-weight: 600;
             color: $black;
         }
-        &>.prev,&>.next{
+        &>.btn--prev,&>.btn--next{
             @extend %GlobalSetting;
 
             width: 28px;
@@ -83,7 +85,7 @@ $shadow: 0 2px 4px rgba(0,0,0,0.3);
             cursor: pointer;
         }
     }
-    &>.show-date{
+    &>.datepicker__choose-date{
         @extend %GlobalSetting;
 
         display: flex;
