--- a/css/datepickerstyle.scss
+++ b/css/datepickerstyle.scss
@@ -84,6 +84,9 @@ $shadow: 0 2px 4px rgba(0,0,0,0.3);
             color: $lightblack;  
             cursor: pointer;
         }
+        &.btn--close-datepicker {
+            font-size: 20px
+        }
     }
     &>.datepicker__choose-date{
         @extend %GlobalSetting;
